--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -44,8 +44,8 @@
                       Productos
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="../paginas/productos.html">Negro</a></li>
-                      <li><a class="dropdown-item" href="../paginas/productos.html">Carey</a></li>
+                      <li><a class="dropdown-item" href="../paginas/productos.html">SS20</a></li>
+                      <li><a class="dropdown-item" href="../paginas/productos.html">SS21/22</a></li>
                       <li><hr class="dropdown-divider"></li>
                       <li><a class="dropdown-item" href="../paginas/productos.html">Ver Todo</a></li>
                     </ul>
