--- a/paginas/armon.html
+++ b/paginas/armon.html
@@ -11,6 +11,24 @@
  <meta name="description" content="Te invitamos a que descubras la historia de este proyecto llamado Armon Studio
  donde buscamos la armonia en cada producto para que los disfrutes al maximo">
 
+  <!--open graph-->
+  <meta property="og:type" content="tienda">
+
+  <!--open graph title-->
+  <meta property="og:title" content="Armon Studio">
+ 
+  <!--open graph image-->
+  <meta property="og:image" content="../imagenes/logo.png">
+  
+  <!--open graph site name-->
+  <meta property="og:site_name" content="Armon Studio">
+ 
+  <!--open graph autor-->
+  <meta property="og:autor" content="Geraldine Martinez">
+ 
+  <!--Favicon-->
+  <link rel="shortcut icon" href="../imagenes/logo.png" type="image/x-icon">
+
  <!-- AOS -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
