--- a/paginas/giftcard.html
+++ b/paginas/giftcard.html
@@ -12,6 +12,24 @@
  <meta name="description" content="Descubri una nueva forma de hacer un regalo con nuestras Gift Card dando un 
  presente con el precio que vos elijas y regalar un par de gafas de sol Armon">
 
+  <!--open graph-->
+  <meta property="og:type" content="tienda">
+
+  <!--open graph title-->
+  <meta property="og:title" content="Armon Studio">
+ 
+  <!--open graph image-->
+  <meta property="og:image" content="../imagenes/logo.png">
+  
+  <!--open graph site name-->
+  <meta property="og:site_name" content="Armon Studio">
+ 
+  <!--open graph autor-->
+  <meta property="og:autor" content="Geraldine Martinez">
+ 
+  <!--Favicon-->
+  <link rel="shortcut icon" href="../imagenes/logo.png" type="image/x-icon">
+
   <!-- AOS -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
