--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -12,6 +12,9 @@
  <meta name="description" content="Presentamos la coleccion de gafas de sol de Armon Studio con un estilo unico y diferente,
  conocida por sus miticos modelos superventas">
 
+  <!--Favicon-->
+  <link rel="shortcut icon" href="../imagenes/logo.png" type="image/x-icon">
+
   <!-- AOS -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
