--- a/index.html
+++ b/index.html
@@ -1,27 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- keywords -->
-    <meta name="keywords" content="Armon, gafas de sol, gafas, anteojos, lentes de sol, tienda online, showroom">
-    <!-- descripcion -->
-    <meta name="description" content="Descubri la seleccion completa de gafas de sol Armon en la tienda online oficial.
-    Compra, ahorra y recibi tus gafas de sol rapido, de forma segura y con posibilidad de devolucion">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- keywords -->
+  <meta name="keywords" content="Armon, gafas de sol, gafas, anteojos, lentes de sol, tienda online, showroom">
+  <!-- descripcion -->
+  <meta name="description" content="Descubri la seleccion completa de gafas de sol Armon en la tienda online oficial.
+  Compra, ahorra y recibi tus gafas de sol rapido, de forma segura y con posibilidad de devolucion">
+
+ <!--open graph-->
+ <meta property="og:type" content="tienda">
+
+ <!--open graph title-->
+ <meta property="og:title" content="Armon Studio">
+
+ <!--open graph image-->
+ <meta property="og:image" content="../imagenes/logo.png">
+ 
+ <!--open graph site name-->
+ <meta property="og:site_name" content="Armon Studio">
+
+ <!--open graph autor-->
+ <meta property="og:autor" content="Geraldine Martinez">
+
+ <!--Favicon-->
+ <link rel="shortcut icon" href="../imagenes/logo.png" type="image/x-icon">
     
-   <!-- AOS -->
-   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+ <!-- AOS -->
+ <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-   <!--Bootstrap-->
-   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+ <!--Bootstrap-->
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <!-- Css -->
-    <link rel="stylesheet" href="css/armon-studio.css">
+ <!-- Css -->
+ <link rel="stylesheet" href="css/armon-studio.css">
 
-    <!-- Geraldine Martinez. Proyecto: Armon Studio -->
+ <!-- Geraldine Martinez. Proyecto: Armon Studio -->
 
-    <title>Armon Studio - Home</title>
+ <title>Armon Studio - Home</title>
 </head>
 
 <body>
