--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -12,6 +12,24 @@
  <meta name="description" content="Descubri la seleccion de productos que tenemos en Armon con ayuda online 
  a traves de un email o por telefono, estamos para ayudarte en este proceso de compra y aclarar todas tus dudas">
 
+  <!--open graph-->
+  <meta property="og:type" content="tienda">
+
+  <!--open graph title-->
+  <meta property="og:title" content="Armon Studio">
+ 
+  <!--open graph image-->
+  <meta property="og:image" content="../imagenes/logo.png">
+  
+  <!--open graph site name-->
+  <meta property="og:site_name" content="Armon Studio">
+ 
+  <!--open graph autor-->
+  <meta property="og:autor" content="Geraldine Martinez">
+ 
+  <!--Favicon-->
+  <link rel="shortcut icon" href="../imagenes/logo.png" type="image/x-icon">
+
   <!-- AOS -->
  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
