--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -12,19 +12,34 @@
  <meta name="description" content="Presentamos la coleccion de gafas de sol de Armon Studio con un estilo unico y diferente,
  conocida por sus miticos modelos superventas">
 
-  <!--Favicon-->
-  <link rel="shortcut icon" href="../imagenes/logo.png" type="image/x-icon">
+ <!--open graph-->
+ <meta property="og:type" content="tienda">
 
-  <!-- AOS -->
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+ <!--open graph title-->
+ <meta property="og:title" content="Armon Studio">
 
-  <!--Bootstrap-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+ <!--open graph image-->
+ <meta property="og:image" content="../imagenes/logo.png">
+ 
+ <!--open graph site name-->
+ <meta property="og:site_name" content="Armon Studio">
 
-  <!-- Css -->
-  <link rel="stylesheet" href="../css/armon-studio.css">
+ <!--open graph autor-->
+ <meta property="og:autor" content="Geraldine Martinez">
 
-  <title>Productos - Armon Studio</title>
+ <!--Favicon-->
+ <link rel="shortcut icon" href="../imagenes/logo.png" type="image/x-icon">
+
+ <!-- AOS -->
+ <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+ <!--Bootstrap-->
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+ <!-- Css -->
+ <link rel="stylesheet" href="../css/armon-studio.css">
+
+ <title>Productos - Armon Studio</title>
 </head>
 <body class="bodyProductos">
     <!-- Cabecera -->
