--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
  <meta property="og:title" content="Armon Studio">
 
  <!--open graph image-->
- <meta property="og:image" href="imagenes/logo.png">
+ <meta property="og:image" content="imagenes/logo.png">
  
  <!--open graph site name-->
  <meta property="og:site_name" content="Armon Studio">
