--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -84,6 +84,7 @@
  <h1 class="tituloContacto">
    CONTACTO
  </h1>
+ <!--INFO HORARIOS DE ATENCION-->
  <main>
    <p class="subtitulo">¡CONTACTANOS!</p>
    <div class="containerContacto">
@@ -100,30 +101,33 @@
 
     </div>
     <!--FORMULARIO CONTACTO -->
-    <form>
-      <div class="mb-3">
-        <label for="exampleInputEmail1" class="form-label">Nombre y Apellido</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-        <div id="emailHelp" class="form-text"></div>
-      </div>
-      <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Numero de celular/telefono</label>
-        <input type="password" class="form-control" id="exampleInputPassword1">
-      </div>
-      <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-      </div>
-      <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Dejanos tu consulta!</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-      </div>
-      <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-        <label class="form-check-label" for="exampleCheck1">Queres recibir novedades?</label>
-      </div>
-      <button type="submit" class="btn btn-primary">Enviar</button>
-    </form>
+    <section class="formContact">
+      <form>
+       <div class="mb-3">
+         <label for="exampleInputEmail1" class="form-label">Nombre y Apellido</label>
+         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+         <div id="emailHelp" class="form-text"></div>
+       </div>
+       <div class="mb-3">
+         <label for="exampleInputPassword1" class="form-label">Numero de celular/telefono</label>
+         <input type="password" class="form-control" id="exampleInputPassword1">
+       </div>
+       <div class="mb-3">
+         <label for="exampleFormControlInput1" class="form-label">Email address</label>
+         <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nombre@ejemplo.com">
+       </div>
+       <div class="mb-3">
+         <label for="exampleFormControlTextarea1" class="form-label">Dejanos tu consulta!</label>
+         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+       </div>
+       <div class="mb-3 form-check">
+         <input type="checkbox" class="form-check-input" id="exampleCheck1">
+         <label class="form-check-label" for="exampleCheck1">Queres recibir novedades?</label>
+       </div>
+        <button type="submit" class="btn btn-primary">Enviar</button>
+     </form>
+
+    </section>
  </main>
  
 
