--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -72,10 +72,7 @@
                     <a class="nav-link" href="../paginas/contacto.html">Contacto</a>
                   </li>
                 </ul>
-                <form class="d-flex">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
+                
               </div>
             </div>
           </nav>
@@ -113,7 +110,7 @@
          <input type="password" class="form-control" id="exampleInputPassword1">
        </div>
        <div class="mb-3">
-         <label for="exampleFormControlInput1" class="form-label">Email address</label>
+         <label for="exampleFormControlInput1" class="form-label">Email</label>
          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nombre@ejemplo.com">
        </div>
        <div class="mb-3">
@@ -124,7 +121,7 @@
          <input type="checkbox" class="form-check-input" id="exampleCheck1">
          <label class="form-check-label" for="exampleCheck1">Queres recibir novedades?</label>
        </div>
-        <button type="submit" class="btn btn-primary">Enviar</button>
+        <button type="submit" class="btn">Enviar</button>
      </form>
 
     </section>
