--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                   <a href="paginas/productos.html" class="modeloGrow">Shop Now</a>
               </div>
               <div class="col-lg-10 col-md-5 col-sm-12 carouselIndex">
-                  <!--carousel-->
+                  <!--CAROUSEL-->
                   <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active" data-bs-interval="10000">
