--- a/paginas/armon.html
+++ b/paginas/armon.html
@@ -41,6 +41,7 @@
  <title>Armon - Armon Studio</title>
 </head>
 <body class="bodyArmon">
+  <!--HEADER-->
   <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-geri">
             <div class="container-fluid">
@@ -77,8 +78,9 @@
           </nav>
  </header>
  <h1 class="tituloArmon">ARMON</h1>
- 
+ <!--ZONA CENTRAL ARMON-->
  <main class="mainArmon">  
+   <!--INFO QUE ES ARMON-->
    <p class="mainP"> Mi nombre es Martina Araudo, tengo 22 años y nací en San Nicolás de los Arroyos! Soy estudiante de 
       Ingeniería industrial y fundadora de ArmonStudio.   
      <br> Al transitar el dia a dia de la pandemia y todo lo que eso conllevaba, surgio la idea de este proyecto hace un año atras. 
@@ -96,6 +98,7 @@
       <img src="../imagenes/separadordos.png" class="imgMarti" alt="">
    </div>
    <hr>
+   <!--MODELOS QUE PUEDEN  GUSTARTE-->
     <p class="modGustarte">Modelos que pueden gustarte</p>
      
    <div data-aos="flip-down" class="img1">
@@ -115,6 +118,8 @@
 
  <p class="stay">STAY IN TOUCH</p>
  <a href="../index.html" class="volverAHome">Volver a home</a>
+
+ <!--PIE DE PAGINA-->
 
  <footer>
    <nav>
