--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -77,7 +77,7 @@
             </div>
           </nav>
  </header>
-    
+    <!--TITULO-->
  <h1 class="tituloContacto">
    CONTACTO
  </h1>
@@ -130,7 +130,7 @@
 
  <p class="stay">STAY IN TOUCH</p> 
  <a href="../index.html" class="volverAHome">Volver a home</a>      
-            
+    <!--PIE DE PAGINA-->
   <footer>
     <nav>
       <img src="../imagenes/socialmediaicons-removebg-preview.png" class="iconsSocial" alt="Icons redes sociales">
