--- a/paginas/giftcard.html
+++ b/paginas/giftcard.html
@@ -88,7 +88,7 @@
    <div class="imgGift">
      <img src="../imagenes/godetoo.png" alt="giftcard" class="imgGiftCard" >
    </div>
-   <!-- Aca iria una seccion con un formulario -->
+   <!-- INFORMACION DEL PRODUCTO  -->
    <section class="producto">
      <p class="titulo">Detalles del producto</p>
      <hr>
@@ -110,6 +110,7 @@
       </p>
    </section>
    <hr>
+   <!--SECCION ARMON SQUAD-->
    <p class="tituloSquad">#ARMONSQUAD</p>
 
    <div class="container">   
