--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -84,6 +84,7 @@
  <h1 class="tituloProductos">PRODUCTOS</h1>
  <!-- Zona Central-->
     <main>
+      <!--PRODUCTOS-->
      <div class="prod">
         <div class="seccionUno">
          <img src="../imagenes/grow.png" class="imgProductos" alt="">
