--- a/paginas/giftcard.html
+++ b/paginas/giftcard.html
@@ -85,7 +85,7 @@
  <main>
    <p class="regalo">Un regalo especial...</p>
         
-   <div class="imgGift">
+   <div class="imgGift" data-aos="zoom-in-up">
      <img src="../imagenes/godetoo.png" alt="giftcard" class="imgGiftCard" >
    </div>
    <!-- INFORMACION DEL PRODUCTO  -->
