--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
       </nav>
   </header>
  <!-- Fin de cabecera -->
- <h1>ARMON STUDIO</h1>
- <hr>
+ <h1 data-aos="fade-up"
+ data-aos-duration="3000">ARMON STUDIO</h1>
+ 
  <!-- Zona Central -->
     <main>
         <section class="container">
-        
             <div class="row">
               <div class="col-lg-2 col-md-7 col-sm-12 d-flex align-items-center">
                   <h2 class="parrafoCarousel">Modelo ESTOCOLMO y GROW
@@ -93,7 +93,7 @@
                   </h2>
                   <a href="paginas/productos.html" class="modeloGrow">Shop Now</a>
               </div>
-              <div class="col-lg-10 col-md-5 col-sm-12 carouselIndex">
+              <div class="col-lg-10 col-md-5 col-sm-12 carouselIndex" >
                   <!--CAROUSEL-->
                   <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
