--- a/index.html
+++ b/index.html
@@ -197,6 +197,7 @@
        <img src="imagenes/socialmediaicons-removebg-preview.png" class="iconsSocial" alt="Iconos redes sociales">
        <ul class="footerRedes">
          <p class="followUs">Follow us</p>
+         <i class="fab fa-instagram"></i>
          <li>
            <a href="https://www.instagram.com/armon.studio/" target="_blank" class="instagram">Instagram</a>
          </li>
