--- a/index.html
+++ b/index.html
@@ -194,18 +194,22 @@
     <!-- Inicio pie de pagina-->
     <footer>
      <nav>
-       <img src="imagenes/socialmediaicons-removebg-preview.png" class="iconsSocial" alt="Iconos redes sociales">
        <ul class="footerRedes">
          <p class="followUs">Follow us</p>
-         <i class="fab fa-instagram"></i>
          <li>
-           <a href="https://www.instagram.com/armon.studio/" target="_blank" class="instagram">Instagram</a>
+           <a href="https://www.instagram.com/armon.studio/" target="_blank" class="instagram">
+            <i class="fab fa-instagram" aria-hidden="true"></i>
+           </a>
          </li>
          <li>
-           <a href="https://www.facebook.com/Armonstudio-112710430636869" target="_blank" class="facebook">Facebook</a>
+           <a href="https://www.facebook.com/Armonstudio-112710430636869" target="_blank" class="facebook">
+            <i class="fab fa-facebook" aria-hidden="true"></i>
+           </a>
          </li>
          <li>
-           <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank" class="correo">Correo</a>
+           <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank" class="correo">
+            <i class="fas fa-envelope-open-text" aria-hidden="true"></i>
+           </a>
          </li>
           <li>
             <p class="envios">Envios a todo el pais</p>
@@ -230,7 +234,8 @@
       </nav>
 
     </footer>
-
+    <!--font awesome-->
+    <script src="https://kit.fontawesome.com/b077dfae91.js" crossorigin="anonymous"></script>
   <!-- Fin de pie de pagina -->
   <!--bootstrap-->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
