--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -159,24 +159,29 @@
  
     <footer class="footerProductos">
       <nav>
-        <img src="../imagenes/socialmediaicons-removebg-preview.png" class="iconsSocial" alt="Icons redes sociales">
         <ul class="footerRedes">
           <p class="followUs">Follow us</p>
-            <li>
-                <a href="https://www.instagram.com/armon.studio/" target="_blank" class="instagram">Instagram</a>
-            </li>
-            <li>
-                <a href="https://www.facebook.com/Armonstudio-112710430636869" target="_blank" class="facebook">Facebook</a>
-            </li>
-            <li>
-                <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank" class="correo">Correo</a>
-            </li>
-            <li>
-                <p class="envios">Envios a todo el pais</p>
-            </li>
-            <li>
-              <a href="paginas/contacto.html" class="info">Informacion</a>
-            </li>
+          <li>
+            <a href="https://www.instagram.com/armon.studio/" target="_blank" class="instagram">
+             <i class="fab fa-instagram" aria-hidden="true"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/Armonstudio-112710430636869" target="_blank" class="facebook">
+             <i class="fab fa-facebook" aria-hidden="true"></i>
+            </a>
+          </li>
+          <li>
+            <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank" class="correo">
+             <i class="fas fa-envelope-open-text" aria-hidden="true"></i>
+            </a>
+          </li>
+          <li>
+           <p class="envios">Envios a todo el pais</p>
+          </li>
+         <li>
+           <a href="paginas/contacto.html" class="info">Informacion</a>
+         </li>
         </ul>
         
         <ul class="infoFooter">
@@ -192,6 +197,8 @@
         </ul>
    </footer>
 <!-- Fin pie de pagina -->
+<!--font awesome-->
+<script src="https://kit.fontawesome.com/b077dfae91.js" crossorigin="anonymous"></script>
 <!--bootstrap-->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
