--- a/paginas/productos.html
+++ b/paginas/productos.html
@@ -172,7 +172,7 @@
             </a>
           </li>
           <li>
-            <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank" class="correo">
+            <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank" class="email">
              <i class="fas fa-envelope-open-text" aria-hidden="true"></i>
             </a>
           </li>
