--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     <!-- Fin Zona Central-->
 
     <!-- Inicio pie de pagina-->
-    <footer>
+    <footer class="footer">
      <nav>
        <ul class="footerRedes">
          <p class="followUs">Follow us</p>
